@@ -340,7 +340,7 @@
   (real &optional real) (values integer real)
   (movable foldable flushable recursive))
 
-(defknown (sb-kernel::truncate1 sb-kernel::floor1 sb-kernel::ceiling1) (real real) integer
+(defknown (sb-kernel::truncate1 sb-kernel::floor1 sb-kernel::ceiling1 sb-kernel::round1) (real real) integer
   (movable foldable flushable recursive no-verify-arg-count))
 
 (defknown (sb-kernel::ftruncate1 sb-kernel::ffloor1 sb-kernel::fceiling1) (real real) float
